Add full stop so I can see what version Github use

--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
     <title>Basic Info Site</title>
 </head>
 <body>
-    <h1>Oops.. This page doesn't exist!</h1>
+    <h1>Oops.. This page doesn't exist.</h1>
 </body>
 </html>
